--- a/01_main.html
+++ b/01_main.html
@@ -493,11 +493,144 @@
                                     <li>
                                         <a href="#">Расходные материалы</a>
                                         <div class="menu-add-section">
-                                            <div class="main-sections-item main-sections-item-10">
+                                            <div class="main-sections-item main-sections-item-09">
                                                 <div class="main-sections-item-inner">
                                                     <div class="main-sections-item-bg"></div>
                                                     <div class="main-sections-item-img"><img src="files/main-section-10.png" alt="" /><img src="files/main-section-10-mobile.png" alt="" /></div>
                                                     <div class="main-sections-item-title"><a href="#">Расходные материалы</a></div>
+                                                    <ul>
+                                                        <li><a href="#">Красящая лента</a></li>
+                                                        <li><a href="#">Текстильная лента</a></li>
+                                                        <li><a href="#">Ярлыки, бирки</a></li>
+                                                        <li><a href="#">Самоклеящиеся этикетки</a></li>
+                                                        <li><a href="#">Расходные материалы для карточных принтеров</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                            <div class="menu-add-catalogue">
+                                                <div class="menu-add-catalogue-inner">
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-02.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной 2D сканер штрих-кода Symbol Motorola</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">17 500 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-01.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной одномерный сканер штрих-кода Datalogic QUICKSCAN</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">25 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">30 000 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-04.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Беспроводной сканер штрихкодов</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-02.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной 2D сканер штрих-кода Symbol Motorola</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">17 500 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-01.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной одномерный сканер штрих-кода Datalogic QUICKSCAN</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">25 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">30 000 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-04.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Беспроводной сканер штрихкодов</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-02.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной 2D сканер штрих-кода Symbol Motorola</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">17 500 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-01.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Ручной одномерный сканер штрих-кода Datalogic QUICKSCAN</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">25 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                                <div class="catalogue-item-price-old">30 000 &#8381;</div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
+
+                                                    <!-- catalogue item -->
+                                                    <div class="catalogue-item">
+                                                        <div class="catalogue-item-inner">
+                                                            <div class="catalogue-item-photo"><a href="#"><img src="files/catalogue-04.jpg" alt="" /></a></div>
+                                                            <div class="catalogue-item-name"><a href="#">Беспроводной сканер штрихкодов</a></div>
+                                                            <div class="catalogue-item-ctrl">
+                                                                <div class="catalogue-item-price">15 500 &#8381;</div>
+                                                                <div class="catalogue-item-cart"><a href="windows/basket.html"></a></div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- catalogue item END -->
                                                 </div>
                                             </div>
                                             <a href="#" class="menu-add-section-close"></a>
@@ -595,7 +728,7 @@
                                     <li>
                                         <a href="#">ККТ онлайн 54-ФЗ.</a>
                                         <div class="menu-add-section">
-                                            <div class="main-sections-item main-sections-item-09">
+                                            <div class="main-sections-item main-sections-item-08">
                                                 <div class="main-sections-item-inner">
                                                     <div class="main-sections-item-bg"></div>
                                                     <div class="main-sections-item-img"><img src="files/main-section-09.png" alt="" /><img src="files/main-section-09-mobile.png" alt="" /></div>
@@ -765,22 +898,22 @@
                             <div class="main-sections-item main-sections-item-08">
                                 <div class="main-sections-item-inner">
                                     <div class="main-sections-item-bg"></div>
-                                    <div class="main-sections-item-img"><img src="files/main-section-08.png" alt="" /><img src="files/main-section-08-mobile.png" alt="" /></div>
-                                    <div class="main-sections-item-title"><a href="#">Ремонт оборудования</a></div>
+                                    <div class="main-sections-item-img"><img src="files/main-section-09.png" alt="" /><img src="files/main-section-09-mobile.png" alt="" /></div>
+                                    <div class="main-sections-item-title"><a href="#">ККТ онлайн 54-ФЗ</a></div>
                                 </div>
                             </div>
                             <div class="main-sections-item main-sections-item-09">
                                 <div class="main-sections-item-inner">
                                     <div class="main-sections-item-bg"></div>
-                                    <div class="main-sections-item-img"><img src="files/main-section-09.png" alt="" /><img src="files/main-section-09-mobile.png" alt="" /></div>
-                                    <div class="main-sections-item-title"><a href="#">ККТ онлайн 54-ФЗ</a></div>
+                                    <div class="main-sections-item-img"><img src="files/main-section-10.png" alt="" /><img src="files/main-section-10-mobile.png" alt="" /></div>
+                                    <div class="main-sections-item-title"><a href="#">Расходные материалы</a></div>
                                 </div>
                             </div>
                             <div class="main-sections-item main-sections-item-10">
                                 <div class="main-sections-item-inner">
                                     <div class="main-sections-item-bg"></div>
-                                    <div class="main-sections-item-img"><img src="files/main-section-10.png" alt="" /><img src="files/main-section-10-mobile.png" alt="" /></div>
-                                    <div class="main-sections-item-title"><a href="#">Расходные материалы</a></div>
+                                    <div class="main-sections-item-img"><img src="files/main-section-08.png" alt="" /><img src="files/main-section-08-mobile.png" alt="" /></div>
+                                    <div class="main-sections-item-title"><a href="#">Ремонт оборудования</a></div>
                                 </div>
                             </div>
                         </div>
