fix, img, experemental

--- a/03_productInfo.html
+++ b/03_productInfo.html
@@ -663,6 +663,8 @@
                                 <!-- product right -->
                                 <div class="product-right">
                                     <div class="catalogue-item-event catalogue-item-event-new">New</div>
+                                    <div class="catalogue-item-event catalogue-item-event-discount">%</div>
+                                    <div class="catalogue-item-event catalogue-item-event-hit">Хит</div>
 
                                     <div class="breadcrumbs"><a href="#">Сканеры</a><span></span><a href="#">Беспроводные</a></div>
                                     <h1>Беспроводной сканер штрих-кода Datalogic PSC QS 2130</h1>
